istio-system-conf/gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: lag0-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.lag0.com.br"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*.lag0.com.br"
      tls:
        mode: SIMPLE
        credentialName: lag0-wildcard-certificate-secret
